# OOP

./: README.md  TEMA 3 -Gestiune magazin.cpp  grupa studenti.cpp
TEMA 2/: CMakeLists.txt  CitireAfisare.h  Exception.cpp  Exception.h  Persoana.cpp  Persoana.h  Student.cpp  Student.h  StudentVoluntar.cpp  StudentVoluntar.h  Voluntar.cpp  Voluntar.h  Voluntariat.cpp  Voluntariat.h  main.cpp
