cmake_minimum_required(VERSION 3.23)
project(untitled8)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled8 main.cpp CitireAfisare.cpp CitireAfisare.h Exception.cpp Exception.h Persoana.h Persoana.cpp Student.h Student.cpp Voluntar.h Voluntar.cpp StudentVoluntar.cpp Voluntariat.h StudentVoluntar.h Voluntariat.cpp)
